--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,37 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: k8s-web-to-nginx
+  name: nginx
 spec:
-  type: LoadBalancer
   selector:
-    app: k8s-web-to-nginx
+    app: nginx
   ports:
-  - port: 3030
-    targetPort: 3000
+  - port: 80
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-web-to-nginx
+  name: nginx
 spec:
   selector:
     matchLabels:
-      app: k8s-web-to-nginx
+      app: nginx
   template:
     metadata:
       labels:
-        app: k8s-web-to-nginx
+        app: nginx
     spec:
       replicas: 5
       containers:
-      - name: k8s-web-to-nginx
-        image: jiaqi13/k8s-web-to-nginx
+      - name: nginx
+        image: nginx
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
-        - containerPort: 3000
+        - containerPort: 80
